@dev #修改忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ Podfile.lock
 /.DS_Store
 Podfile.lock
 /Podfile.lock
+*.xcuserstate  
+xcuserdata  
+UserInterfaceState.xcuserstate  
+xcuserdata/  
+UserInterface.xcuserstate
