@dev #增加amplify storage

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -57,5 +57,12 @@
       "service": "Cognito"
     }
   },
-  "function": {}
+  "function": {},
+  "storage": {
+    "kfzpicture": {
+      "dependsOn": [],
+      "providerPlugin": "awscloudformation",
+      "service": "S3"
+    }
+  }
 }
