--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,8 +1,8 @@
 {
-  "projectName": "opencvtestmain",
-  "version": "3.1",
-  "frontend": "ios",
   "providers": [
     "awscloudformation"
-  ]
+  ],
+  "projectName": "opencvtestmain",
+  "version": "3.1",
+  "frontend": "ios"
 }
